--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "commander": "^8.1.0",
     "enmap": "^5.8.7",
-    "prompt": "^1.2.0"
+    "node-cron": "^3.0.0",
+    "readline-sync": "^1.4.10"
   }
 }
