--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,39 @@
 version: "3.9" # optional since v1.27.0
 services:
   mongo:
-    image: mongo
+    image: bitnami/mongodb:latest
     restart: always
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: autoytMongo
+      MONGODB_REPLICA_SET_MODE: primary
+      MONGODB_ROOT_USER: root
+      MONGODB_ROOT_PASSWORD: pass
+      MONGODB_REPLICA_SET_KEY: replicasetkey123
+      MONGODB_ADVERTISED_HOSTNAME: mongo
+      MONGODB_DATABASE: autoYT
+    ports:
+      - 27017:27017
+    volumes:
+      - mongoData:/bitnami/mongodb:rw
   server:
     build: server/.
+    depends_on:
+      - mongo
     volumes:
       - /home/strenkml/AutoYT/downloads:/downloads
       - /home/strenkml/AutoYT/config:/config
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: autoytMongo
-      ME_CONFIG_MONGODB_URL: mongodb://root:autoytMongo@mongo:27017/
+      ME_CONFIG_MONGODB_ADMINPASSWORD: pass
+      ME_CONFIG_MONGODB_URL: mongodb://root:pass@mongo:27017/
   cli:
     build: cli/.
+    depends_on:
+      - mongo
     volumes:
       - /home/strenkml/AutoYT/config:/config
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: autoytMongo
-      ME_CONFIG_MONGODB_URL: mongodb://root:autoytMongo@mongo:27017/
+      ME_CONFIG_MONGODB_ADMINPASSWORD: pass
+      ME_CONFIG_MONGODB_URL: mongodb://root:pass@mongo:27017/
+volumes:
+  mongoData:
