--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/strenkml/autoYT#readme",
   "dependencies": {
-    "deep-diff": "^1.0.2",
+    "@distube/youtube-dl": "^2.2.2",
     "mongodb": "^4.1.1",
     "node-cron": "^3.0.0"
   }
