--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,12 +8,15 @@ COPY package*.json ./
 
 RUN npm install
 
-# Install youtube-dl
-RUN curl -L https://yt-dl.org/downloads/latest/youtube-dl -o /usr/local/bin/youtube-dl
-RUN chmod a+rx /usr/local/bin/youtube-dl
+# Install youtube-dlp
+RUN curl -L https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp -o /usr/local/bin/yt-dlp
+RUN chmod a+rx /usr/local/bin/yt-dlp
+
+# Add apt repo for Python3.6
+RUN add-apt-repository ppa:deadsnakes/ppa
 
 # Install ffmpeg and atomicparsley
-RUN apt update && apt install -y ffmpeg atomicparsley
+RUN apt update && apt install -y ffmpeg atomicparsley python3.6
 
 # Make log directory
 RUN mkdir -p /var/log/autoyt
